# LEAP

./: .gitignore  .leap_history  .react_agent_history  benchmark.py  capabilities_benchmark.py  coding_benchmark.py  pyproject.toml
langchain_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  main.py  prompts.py
langchain_agent/tools/: __init__.py  code_tools.py  crawl_tools.py  file_tools.py  shell_tools.py  utility_tools.py  web_tools.py
leap_agent/: __init__.py  catalogue.py  cli.py  config.py  inference.py  main.py  orchestrator.py
leap_agent/tools/: __init__.py  code_tools.py  file_tools.py  shell_tools.py  utility_tools.py  web_tools.py
